--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
-    "next": "13.4.13",
+    "framer-motion": "^10.15.1",
+    "next": "^13.4.13",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3"
   }
 }
