--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.4",
+    "@nextui-org/react": "^2.0.8",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.15.1",
+    "mui": "^0.0.1",
     "next": "^13.4.13",
     "postcss": "8.4.27",
     "react": "^18.2.0",
